--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
         <title>Ремнот стиральных машин</title>
         <link rel="stylesheet" href="main.css">
     </head>
-    <body>
+    <body bgcolor="#93B874">
         <form>
             <p><input type="button" value="Контакты"></p>
         </form>
