--- a/flexbox.html
+++ b/flexbox.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
+        <link rel="stylesheet" href="flexbox.css">
         <meta charset="UTF-8">
         <title>Flexbox</title>
-    </head>
+     </head>
         <body>
-            <div class="top-line">
-               <nav>
-                  <ul>
+           <ul class="flex-container">
                      <li>Item</li>
                      <li>Item</li>
                      <li>Item</li>
                      <li>Item</li>
             </ul>
-            </nav>
-            </div>>
-
+        
         </body>
 
 </html>
